--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ p {
   border: none;
 }
 .ticketOption {
-  width: 100px;
+  width: 120px;
   background-color: white;
   border: 1px solid lightgray;
   display: none;
@@ -284,4 +284,15 @@ p {
   100% {
     opacity: 0;
   }
+}
+
+.bi-moon, .bi-brightness-high{
+  border: 1px solid lightgray;
+  font-size: 18px;
+  margin:0;
+  height:100%;
+  padding: 2px;
+  border-radius: 5px;
+  margin-left: 10px;
+  color:blue;
 }
