--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  max-width: 100vw;
+}
 input {
   outline: none;
 }
@@ -18,6 +21,13 @@ input {
   margin: 0;
   margin-right: 20px;
   position: relative;
+}
+.updateColumnText{
+  width:100%;
+}
+hr{
+  width:100%;
+  background-color: lightgray;
 }
 .options {
   float: right;
@@ -75,6 +85,9 @@ i {
 }
 .others p {
   margin: 0px 10px;
+}
+.others p:hover{
+ cursor: pointer;
 }
 .options:hover {
   cursor: pointer;
@@ -149,13 +162,33 @@ p {
 .bi-pencil:hover {
   cursor: pointer;
 }
-.offcanvas-header:hover .bi-pencil {
+.offcanvas-header:hover .editTicketTitle {
   display: inline-block;
+}
+.moreTask:hover .editTicketDescription {
+  display: inline-block;
+}
+.moreTask{
+  overflow-x: none;
+}
+.editTicketDescription{
+  float:right;
+}
+.offcanvas-body{
+  overflow-x: visible !important;
+  flex-grow: 0;
 }
 .editTicketValue {
   width: 100%;
   margin-bottom: 10px;
   padding-left: 10px;
+}
+.cancelTicketComment{
+  color:brown
+}
+.cancelTicketComment:hover{
+  background-color:brown;
+  color:white;
 }
 .editTicketValue:focus{
     border: 1px solid blue;
@@ -185,6 +218,9 @@ p {
   height: 85%;
   overflow-y: scroll;
 }
+.textarea{
+  display: none;
+}
 .btn-secondary {
   width: 49%;
   box-sizing: border-box;
@@ -192,7 +228,7 @@ p {
 .btn-success {
   width: 49%;
   box-sizing: border-box;
-  margin-right: 6px;
+  margin-right: 3px;
 }
 .visible {
   display: block;
@@ -229,7 +265,7 @@ p {
 }
 .tickets {
   max-width: 100%;
-  height: 70px;
+  height: 80px;
   padding: 10px;
   background-color: white;
   border-radius: 5px;
@@ -262,7 +298,7 @@ p {
 
 .animated {
   animation-name: fadeOut;
-  animation-duration: 4s;
+  animation-duration: 2s;
 }
 @-webkit-keyframes fadeOut {
   0% {
@@ -291,8 +327,73 @@ p {
   font-size: 18px;
   margin:0;
   height:100%;
-  padding: 2px;
+  padding: 3px;
   border-radius: 5px;
   margin-left: 10px;
   color:blue;
+}
+.bi-moon:hover, .bi-brightness-high:hover{
+ cursor: pointer;
+}
+i.bi.bi-check2{
+  display:inline;
+}
+.dropdown-item p{
+  font-size: 15px;
+}
+.dropdown-item{
+  display:inline;
+}
+.dropdown-divider{
+  margin:0
+}
+.dropdown-menu{
+  overflow-y: scroll;
+  height:400px;
+}
+.enhancement{
+  background-color: aqua;
+}
+.bug{
+  background-color: red;
+}
+.documentation{
+  background-color: blue;
+}
+.duplicate{
+  background-color: lightgray;
+}
+.good-issue{
+  background-color: rgb(173, 5, 188);
+}
+.help{
+  background-color: green;
+}
+.invalid{
+  background-color: yellow;
+}
+.question{
+  background-color: rgb(200, 7, 158);
+}
+.test{
+  background-color: rgb(140, 126, 204);
+}
+#selectedLabel{
+  font-size: 15px;
+  padding:3px 5px;
+  border-radius: 15px;
+}
+.color{
+  margin-right:5px;
+  width:12px;
+  height:12px;
+  border-radius: 50%;
+  display:inline-block;
+}
+#label{
+  font-size: 15px;
+  padding:3px 5px;
+  border-radius: 15px;
+  display:inline-block;
+  margin-top: 3%;
 }
